<resources>
    <string name="app_name">林二闲</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thanks</string>
    <string name="nav_header_subtitle">做自己的主人。</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="zhuxiao">注销</string>

    <string name="menu_home">主页</string>
    <string name="menu_gallery">我的发布</string>
    <string name="menu_slideshow">我的收藏</string>
    <string name="menu_tools">我的详情</string>
    <string name="menu_changemm">修改密码</string>
    <string name="menu_send">关于二闲</string>
    <string name="pp">拼单</string>
    <string name="xz">闲置</string>
    <string name="bs">比赛</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
